# bwunicluster

./: README.md  auto_screen.md  run_job.sh  stop_all_jobs.sh  submit_job.sh
openmp/: CMakeLists.txt  OpenMPTest.cpp  README.md
